<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tvCountry"
        android:text="@string/name_country"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvTotalConfirmed"
        android:text="@string/confirmed"
        app:layout_constraintTop_toBottomOf="@id/tvCountry"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvShowTotalConfirmed"
        app:layout_constraintTop_toBottomOf="@id/tvCountry"
        app:layout_constraintLeft_toRightOf="@id/tvTotalConfirmed"
        android:layout_marginStart="@dimen/margin_text_view"
        android:text="@string/total_confirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/tvTotalDeath"
        android:text="@string/death"
        app:layout_constraintTop_toBottomOf="@id/tvTotalConfirmed"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvSHowTotalDeath"
        app:layout_constraintBottom_toBottomOf="@id/tvTotalDeath"
        app:layout_constraintLeft_toRightOf="@id/tvTotalDeath"
        android:layout_marginStart="@dimen/margin_text_view"
        android:text="@string/total_death"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/tvDate"
        android:text="@string/date_update"
        app:layout_constraintBottom_toBottomOf="@id/tvShowDate"
        app:layout_constraintRight_toLeftOf="@id/tvShowDate"
        android:layout_marginEnd="@dimen/margin_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/tvShowDate"
        android:text="2020-00-24T02:30:07Z"
        app:layout_constraintTop_toBottomOf="@id/tvSHowTotalDeath"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        app:layout_constraintTop_toBottomOf="@id/tvShowDate"
        android:layout_margin="5dp"
        android:backgroundTint="#000000"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
